syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service pay {
    //获取支付订单列表
    rpc  GetPayList(GetPayListReq) returns (GetPayListResp){
        option (google.api.http) ={
            get:"/GetPayList"
        };
    };
    //创建支付订单
    rpc  CreatePayInfo(CreatePayInfoReq) returns (CreatePayInfoResp){
        option (google.api.http) ={
            post:"/CreatePayInfo"
            body:"*"
        };
    };
    //删除支付订单
    rpc  DelPayInfo(DelPayInfoReq) returns (DelPayInfoResp){
        option (google.api.http) ={
            delete:"/DelPayInfo"
        };
    };
    //支付支付提交
    rpc  PaySuccess(PaySuccessReq) returns (PaySuccessResp){
        option (google.api.http) ={
            post:"/PaySuccess"
            body:"*"
        };
    };
}

message GetPayListReq {
    // 返回数量
    int64 limit = 1;
    // 返回数据开始数
    int64 offset = 2;
    // 支付订单ID
    int64 ID = 3;
    // 支付订单状态
    int64 status = 4;
    // 支付方式
    int64 way = 5;
    // 开始时间
    int64 startTime = 6;
    // 结束时间
    int64 endTime = 7;
}

message GetPayListResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
    // 检索数据总数
    int64 Allnum =3;
    // 数据数列
    repeated GetPayListInfo Data =4;
}

message GetPayListInfo {
    // 支付订单ID
    int64 ID = 1; 
    // 支付订单支付价钱
    int64 Price = 2; 
    // 支付方式  1银行卡 2支付宝 3微信
    int64 Way = 3; 
    // 支付账号
    string Number  = 4; 
    // 支付订单状态
    int64 Status = 5; 
    // 创建时间
    int64 CreateTime = 6; 
}

message CreatePayInfoReq {
    // 订单ID数组
    repeated int64 CIDs = 1;
    // 订单总价钱
    int64 Price = 2;
}

message CreatePayInfoResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
    // 支付订单ID
    int64 ID = 3;
}

message DelPayInfoReq {
    // 支付订单ID
    int64 ID = 1;
}

message DelPayInfoResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
}

message PaySuccessReq {
    // 支付订单ID
    int64 ID = 1;
    // 支付价钱
    int64 price = 2;
    // 支付方式 1银行卡 2支付宝 3微信
    int64 way = 3;
    // 支付账号
    string number = 4;
    // 支付流水号
    string serial  = 5;
}

message PaySuccessResp {
    // 返回码 200:成功 500:失败
    int32 Code = 1;
    // 错误信息
    string Err = 2;
}